bubba-frontend (1.2.4.26) claire estelle; urgency=low

  * merge important stuff missing from a merge :(

 -- Carl Fürstenberg <carl@excito.com>  Fri, 08 Jan 2010 19:23:45 +0100

bubba-frontend (1.2.4.25) claire estelle; urgency=low

  * fix lanupdate and dhcpd 

 -- Carl Fürstenberg <carl@excito.com>  Fri, 08 Jan 2010 17:50:29 +0100

bubba-frontend (1.2.4.24) claire estelle; urgency=low

  * remove debug print_r 

 -- Carl Fürstenberg <carl@excito.com>  Fri, 08 Jan 2010 17:31:43 +0100

bubba-frontend (1.2.4.23) claire estelle; urgency=low

  * svn add

 -- Carl Fürstenberg <carl@excito.com>  Fri, 08 Jan 2010 17:29:29 +0100

bubba-frontend (1.2.4.22) claire estelle; urgency=low

  * Network manager and profile stuff

 -- Carl Fürstenberg <carl@excito.com>  Fri, 08 Jan 2010 17:27:19 +0100

bubba-frontend (1.2.4.20) claire estelle; urgency=low

  * only use single call to set interface 

 -- Carl Fürstenberg <carl@excito.com>  Tue, 05 Jan 2010 17:09:56 +0100

bubba-frontend (1.2.4.19) claire estelle; urgency=low

  [ Carl Fürstenberg ]
  * adding calls to interface set functions 

  [ PA Nilsson ]
  * Updated network UI with "auto" profile.

 -- Carl Fürstenberg <carl@excito.com>  Tue, 05 Jan 2010 16:51:59 +0100

bubba-frontend (1.2.4.18) karmic; urgency=low

  * fix logic in WEP validation 

 -- Carl Fürstenberg <carl@excito.com>  Mon, 04 Jan 2010 17:23:32 +0100

bubba-frontend (1.2.4.17) claire estelle; urgency=low

  * Testing multiple distributions 

 -- Carl Fürstenberg <carl@excito.com>  Mon, 04 Jan 2010 11:30:24 +0100

bubba-frontend (1.2.4.16) claire; urgency=low

  * Added a restart of hostapd when reconfiguring
  * Fixed bug in wlan_view that rendered config useless 

 -- Tor Krill <tor@excito.com>  Sun, 03 Jan 2010 23:12:59 +0100

bubba-frontend (1.2.4.15) claire; urgency=low

  * Fixed read out network config when if was down. 
  * Refactored all code to use query_service in the same way as 
    service_running. It now returns true if service is enabled 
