@@ -757,8 +757,12 @@ class Network extends Controller{
 		$data['encryptions'] = $this->networkmanager->get_available_wlan_encryptions();
 		$data['current_encryption'] = $this->networkmanager->get_current_wlan_encryption();
 		$data['encryption_key'] = $this->networkmanager->get_wlan_encryption_key();
-		$data['channels'] = $this->networkmanager->get_wlan_available_channels();
-		$data['current_channel'] = $this->networkmanager->get_wlan_current_channel();
+        try {
+		$data['bands'] = $this->networkmanager->get_wlan_available_channels();
+        } catch( Exception $e ) {
+            $data['bands'] = array();
+        }
+        $data['current_channel'] = $this->networkmanager->get_wlan_current_channel();
 		if($strip){
 			$this->load->view(THEME.'/network/network_wlan_view.php',$data);
 		}else{
