@@ -1,3 +1,9 @@
+bubba-frontend (1.2.4.27) claire estelle; urgency=low
+
+  * merge more missing channel stuff 
+
+ -- Carl Fürstenberg <carl@excito.com>  Fri, 08 Jan 2010 19:47:11 +0100
+
 bubba-frontend (1.2.4.26) claire estelle; urgency=low
 
   * merge important stuff missing from a merge :(
